--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,19 +25,14 @@ jobs:
       if: contains(matrix.os, 'macos') || contains(matrix.os, 'ubuntu')
       shell: bash -l {0}
       run: |
-        mkdir -p build
-        cd build
-        cmake -GNinja -DBUILD_TESTING:BOOL=ON \
-              -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} ..
+        curl -fsSL https://raw.githubusercontent.com/prefix-dev/pixi/main/install/install.sh | bash
 
-    - name: Configure [Windows]
+    - name: Install pixi [Windows]
       if: contains(matrix.os, 'windows')
-      shell: bash -l {0}
+      shell: pwsh
       run: |
-        mkdir -p build
-        cd build
-        cmake -G"Visual Studio 16 2019" -DBUILD_TESTING:BOOL=ON \
+        iwr -useb https://raw.githubusercontent.com/prefix-dev/pixi/main/install/install.ps1 | iex
 
-    - name: Configure [Linux&macOS]
+    - name: Build and Run
       run: |
         pixi run start
