--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
       shell: bash -l {0}
       run: |
         curl -fsSL https://raw.githubusercontent.com/prefix-dev/pixi/main/install/install.sh | bash
+        echo "$HOME/.pixi/bin" >> $GITHUB_PATH
 
     - name: Install pixi [Windows]
       if: contains(matrix.os, 'windows')
