--- a/pixi.toml
+++ b/pixi.toml
@@ -27,11 +27,11 @@ configure = { cmd = [
 build = { cmd = ["ninja", "-C", ".build"], depends_on = ["configure"] }
 
 # Start the built executable
-onnx-cpp-benchmark = { cmd = ".build/bin/onnx-cpp-benchmark", depends_on = ["build"] }
+onnx-cpp-benchmark = { cmd = ".build/onnx-cpp-benchmark"}
 
 
 [dependencies]
-onnxruntime = "1.*"
+onnxruntime-cpp = "1.*"
 cli11 = "2.*"
 compilers = "*"
 ninja = "*"
