--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,19 +27,20 @@ jobs:
       run: |
         curl -fsSL https://raw.githubusercontent.com/prefix-dev/pixi/main/install/install.sh | bash
         echo "$HOME/.pixi/bin" >> $GITHUB_PATH
-        pixi --version
 
     - name: Install pixi [Windows]
       if: contains(matrix.os, 'windows')
       shell: pwsh
       run: |
-        iwr -useb https://raw.githubusercontent.com/prefix-dev/pixi/main/install/install.ps1 | iex
+        curl https://raw.githubusercontent.com/prefix-dev/pixi/main/install/install.ps1 -o install.ps1
+        ./install.ps1 v0.0.5
         "$env:LOCALAPPDATA\pixi\bin" >> $env:GITHUB_PATH
-        pixi --version
 
     - name: Build
       shell: bash -l {0}
       run: | 
+        # Check version of pixi actually used
+        pixi --version
         # As of pixi 0.0.5 the dependency does not work nicely
         pixi run build
         
