--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       shell: pwsh
       run: |
         curl https://raw.githubusercontent.com/prefix-dev/pixi/main/install/install.ps1 -o install.ps1
-        ./install.ps1 v0.0.5
+        ./install.ps1
         "$env:LOCALAPPDATA\pixi\bin" >> $env:GITHUB_PATH
 
     - name: Build
@@ -41,7 +41,6 @@ jobs:
       run: | 
         # Check version of pixi actually used
         pixi --version
-        # As of pixi 0.0.5 the dependency does not work nicely
         pixi run build
         
     - name: Run
